@@ -1,0 +1,8 @@
+function h = circle(x,y,r,linespec)
+
+hold on
+th = 0:pi/50:2*pi;
+xunit = r * cos(th) + x;
+yunit = r * sin(th) + y;
+h = plot(xunit, yunit,linespec);
+hold off
