@@ -1,3 +1,6 @@
+2007-11-09  Jeremy Cribb <jcribb@email.unc.edu>
+	* circle.m:  external function that plots circles.
+
 2007-04-10  Kalpit Desai <kvdesai@email.unc.edu>
 	* savefig.m: external code that allows exporting .fig files into various image formats, with specified resolution. Very reliable. Needs Ghostscript in system path.
 
